src/test/ui/xcrate/xcrate-private-by-default.stderr
error[E0603]: static `j` is private
  --> $DIR/xcrate-private-by-default.rs:23:29
   |
LL |     static_priv_by_default::j;
   |                             ^ this static is private
   |
note: the static `j` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:47:1
   |
LL | static j: isize = 0;
   | ^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `k` is private
  --> $DIR/xcrate-private-by-default.rs:25:29
   |
LL |     static_priv_by_default::k;
   |                             ^ this function is private
   |
note: the function `k` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:48:1
   |
LL | fn k() {}
   | ^^^^^^

error[E0603]: unit struct `l` is private
  --> $DIR/xcrate-private-by-default.rs:27:29
   |
LL |     static_priv_by_default::l;
   |                             ^ this unit struct is private
   |
note: the unit struct `l` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:49:1
   |
LL | struct l;
   | ^^^^^^^^^

error[E0603]: enum `m` is private
  --> $DIR/xcrate-private-by-default.rs:29:35
   |
LL |     foo::<static_priv_by_default::m>();
   |                                   ^ this enum is private
   |
note: the enum `m` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:50:1
   |
LL | enum m {}
   | ^^^^^^

error[E0603]: type alias `n` is private
  --> $DIR/xcrate-private-by-default.rs:31:35
   |
LL |     foo::<static_priv_by_default::n>();
   |                                   ^ this type alias is private
   |
note: the type alias `n` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:51:1
   |
LL | type n = isize;
   | ^^^^^^^^^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/xcrate-private-by-default.rs:35:29
   |
LL |     static_priv_by_default::foo::a;
   |                             ^^^ this module is private
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:12:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/xcrate-private-by-default.rs:37:29
   |
LL |     static_priv_by_default::foo::b;
   |                             ^^^ this module is private
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:12:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/xcrate-private-by-default.rs:39:29
   |
LL |     static_priv_by_default::foo::c;
   |                             ^^^ this module is private
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:12:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/xcrate-private-by-default.rs:41:35
   |
LL |     foo::<static_priv_by_default::foo::d>();
   |                                   ^^^ this module is private
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:12:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/xcrate-private-by-default.rs:43:35
   |
LL |     foo::<static_priv_by_default::foo::e>();
   |                                   ^^^ this module is private
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:12:1
   |
LL | mod foo {
   | ^^^^^^^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0603`.
